--- a/pom.xml
+++ b/pom.xml
@@ -93,7 +93,7 @@
                 <configuration>
                     <shadedArtifactAttached>true</shadedArtifactAttached>
                     <shadedClassifierName>project-classifier</shadedClassifierName>
-                    <outputFile>shade\${project.artifactId}.jar</outputFile>
+                    <outputFile>dist\${project.artifactId}.jar</outputFile>
                     <transformers>
                         <transformer implementation=
                                                 "org.apache.maven.plugins.shade.resource.ManifestResourceTransformer">
