--- a/pom.xml
+++ b/pom.xml
@@ -96,7 +96,7 @@
                     <transformers>
                         <transformer implementation=
                                                 "org.apache.maven.plugins.shade.resource.ManifestResourceTransformer">
-                            <mainClass>donotforget.ui.Launcher</mainClass>
+                            <mainClass>donotforget.core.ServerMain</mainClass>
                         </transformer>
                     </transformers>
                 </configuration>
