--- a/launcher/pom.xml
+++ b/launcher/pom.xml
@@ -13,9 +13,27 @@
     <modelVersion>4.0.0</modelVersion>
 
 	<!-- password info -->
-    <groupId>com.donotforget.launcher</groupId>
+    <groupId>donotforget.launcher</groupId>
     <artifactId>launcher</artifactId>
     <version>1.0</version>
     <packaging>jar</packaging>
+
+    <build>
+        <plugins>
+            <plugin>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-jar-plugin</artifactId>
+				<configuration>
+                    <outputDirectory>${project.parent.basedir}/dist</outputDirectory>
+                    <archive>
+                        <manifest>
+                            <mainClass>donotforget.launcher.Launcher</mainClass>
+                        </manifest>
+                    </archive>
+				</configuration>
+			</plugin>
+
+		</plugins>
+	</build>
 
 </project>
