--- a/remote/pom.xml
+++ b/remote/pom.xml
@@ -18,4 +18,16 @@
     <version>1.0</version>
     <packaging>jar</packaging>
 
+    <build>
+        <plugins>
+
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-jar-plugin</artifactId>
+                <version>3.2.0</version>
+            </plugin>
+
+        </plugins>
+    </build>
+
 </project>
