--- a/client/pom.xml
+++ b/client/pom.xml
@@ -12,10 +12,71 @@
     </parent>
     <modelVersion>4.0.0</modelVersion>
 
+    <properties>
+        <javafx.version>13</javafx.version>
+    </properties>
+
+    <name>client</name>
+
 	<!-- password info -->
-    <groupId>com.donotforget.client</groupId>
-    <artifactId>client</artifactId>
+    <groupId>donotforget.client</groupId>
+    <artifactId>donotforget.client</artifactId>
     <version>1.0</version>
     <packaging>jar</packaging>
 
+
+    <dependencies>
+        <dependency>
+          <groupId>org.openjfx</groupId>
+          <artifactId>javafx-controls</artifactId>
+          <version>${javafx.version}</version>
+        </dependency>
+    </dependencies>
+      
+    <build>
+        <plugins>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-compiler-plugin</artifactId>
+                <version>3.8.1</version>
+                <configuration>
+                    <release>11</release>
+                </configuration>
+            </plugin>
+
+            <plugin>
+                <groupId>org.openjfx</groupId>
+                <artifactId>javafx-maven-plugin</artifactId>
+                <version>0.0.3</version>
+                <configuration>
+                    <mainClass>client.Launcher</mainClass>
+                </configuration>
+            </plugin>
+              
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-shade-plugin</artifactId>
+                <version>3.2.0</version>
+                <executions>
+                    <execution>
+                        <phase>package</phase>
+                        <goals>
+                            <goal>shade</goal>
+                        </goals>
+                        <configuration>
+                            <shadedArtifactAttached>true</shadedArtifactAttached>
+                            <shadedClassifierName>project-classifier</shadedClassifierName>
+                            <outputFile>${project.parent.basedir}\dist\Client.jar</outputFile>
+                            <transformers>
+                                <transformer implementation=
+                                                     "org.apache.maven.plugins.shade.resource.ManifestResourceTransformer">
+                                    <mainClass>donotforget.client.Launcher</mainClass>
+                                </transformer>
+                            </transformers>
+                        </configuration>
+                    </execution>
+                </executions>
+            </plugin>
+        </plugins>
+    </build>
 </project>
