--- a/server/pom.xml
+++ b/server/pom.xml
@@ -13,7 +13,7 @@
     <modelVersion>4.0.0</modelVersion>
 
 	<!-- password info -->
-    <groupId>com.donotforget.server</groupId>
+    <groupId>donotforget.server</groupId>
     <artifactId>server</artifactId>
     <version>1.0</version>
     <packaging>jar</packaging>
