--- a/client/pom.xml
+++ b/client/pom.xml
@@ -7,7 +7,7 @@
 	<!-- parent pom -->
     <parent>
         <artifactId>donotforget</artifactId>
-        <groupId>com.donotforget</groupId>
+        <groupId>donotforget</groupId>
         <version>1.0</version>
     </parent>
     <modelVersion>4.0.0</modelVersion>
