--- a/remote/pom.xml
+++ b/remote/pom.xml
@@ -7,13 +7,13 @@
 	<!-- parent pom -->
     <parent>
         <artifactId>donotforget</artifactId>
-        <groupId>com.donotforget</groupId>
+        <groupId>donotforget</groupId>
         <version>1.0</version>
     </parent>
     <modelVersion>4.0.0</modelVersion>
 
 	<!-- password info -->
-    <groupId>com.donotforget.remote</groupId>
+    <groupId>donotforget.remote</groupId>
     <artifactId>remote</artifactId>
     <version>1.0</version>
     <packaging>jar</packaging>
