Solucionando problemas con el registro RMI

--- a/launcher/pom.xml
+++ b/launcher/pom.xml
@@ -30,7 +30,8 @@
                             <mainClass>donotforget.launcher.Launcher</mainClass>
                         </manifest>
                     </archive>
-				</configuration>
+                    <finalName>Launcher</finalName>
+                </configuration>
 			</plugin>
 
 		</plugins>
