--- a/server/pom.xml
+++ b/server/pom.xml
@@ -33,6 +33,13 @@
             <version>3.30.1</version>
         </dependency>
 
+        <dependency>
+            <groupId>org.mybatis</groupId>
+            <artifactId>mybatis</artifactId>
+            <version>3.5.5</version>
+        </dependency>
+
+
     </dependencies>
 
     <build>
