--- a/server/pom.xml
+++ b/server/pom.xml
@@ -43,9 +43,8 @@
     </dependencies>
 
     <build>
-        <plugins>
-            
 
+        <plugins>
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-shade-plugin</artifactId>
@@ -61,10 +60,17 @@
                             <shadedClassifierName>project-classifier</shadedClassifierName>
                             <outputFile>${project.parent.basedir}\dist\Server.jar</outputFile>
                             <transformers>
+
                                 <transformer implementation=
                                                     "org.apache.maven.plugins.shade.resource.ManifestResourceTransformer">
                                     <mainClass>donotforget.server.ServerMain</mainClass>
                                 </transformer>
+
+                                <transformer implementation="org.apache.maven.plugins.shade.resource.IncludeResourceTransformer">
+                                    <resource>src/main/resources</resource>
+                                    <file>schema.sql</file>
+                                </transformer>
+
                             </transformers>
                         </configuration>
                     </execution>
@@ -73,5 +79,4 @@
 
 		</plugins>
 	</build>
-
 </project>
