--- a/client/pom.xml
+++ b/client/pom.xml
@@ -52,7 +52,7 @@
                     <mainClass>client.Launcher</mainClass>
                 </configuration>
             </plugin>
-              
+
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-shade-plugin</artifactId>
@@ -71,6 +71,10 @@
                                 <transformer implementation=
                                                      "org.apache.maven.plugins.shade.resource.ManifestResourceTransformer">
                                     <mainClass>donotforget.client.Launcher</mainClass>
+                                </transformer>
+                                <transformer implementation="org.apache.maven.plugins.shade.resource.IncludeResourceTransformer">
+                                    <resource>src/main/resources</resource>
+                                    <file>styles.css</file>
                                 </transformer>
                             </transformers>
                         </configuration>
