--- a/client/pom.xml
+++ b/client/pom.xml
@@ -34,6 +34,12 @@
         </dependency>
 
         <dependency>
+            <groupId>com.jfoenix</groupId>
+            <artifactId>jfoenix</artifactId>
+            <version>9.0.10</version>
+        </dependency>
+
+        <dependency>
             <groupId>donotforget.remote</groupId>
             <artifactId>remote</artifactId>
             <version>1.0</version>
