--- a/client/pom.xml
+++ b/client/pom.xml
@@ -40,6 +40,12 @@
         </dependency>
 
         <dependency>
+            <groupId>no.tornado</groupId>
+            <artifactId>tornadofx-controls</artifactId>
+            <version>1.0.4</version>
+        </dependency>
+
+        <dependency>
             <groupId>donotforget.remote</groupId>
             <artifactId>remote</artifactId>
             <version>1.0</version>
